# space

./: .gitignore  db.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
vsc/: chat.py  data.py  fileup.py  home.py  main.py
